# movie-repository-api

./: .dockerignore  .gitignore  Dockerfile  README.md  kafka-cluster-compose-arm64.yml  kafka-cluster-compose.yml  next.config.mjs  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
api/: main.py
api/entity/: __init__.py  entity_movie.py  entity_response.py  entity_warmup.py
api/infra/: fetch.py  init_app.py  init_config.py  init_storage.py  warmup.py
api/router/: fetch_router.py
api/util/: default_util.py  logger.py
movie_repository/: main.py
movie_repository/entity/: __init__.py  entity_movie.py  entity_warmup.py
movie_repository/infra/: fetch.py  fetch_bilibili.py  fetch_douban.py  fetch_tencent.py  fetcher.py  init_app.py  init_config.py  init_storage.py  initializer_app.py  initializer_config.py  initializer_db.py  warmup.py
movie_repository/router/: fetch_router.py
movie_repository/util/: default_util.py  logger.py
saves/: coordination.yml
saves/bilibili/: bilibili_1.json  bilibili_2.json  bilibili_3.json
src/app/: layout.tsx  page.tsx
src/app/auth/: layout.tsx
src/app/auth/login/: page.tsx
src/app/auth/register/: page.tsx
src/app/proxy/: route.ts
src/components/: Map.tsx
src/infra/: type_define.ts
src/scss/: globals.scss  page.module.scss
tests/: clazz_test.py  consume_kafka.py  main.py  main_youku.py  mongo_script.py
